# real-time-project

./: .env  Dockerfile  Dockerfile.airflow  Dockerfile.etl  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
api/: Dockerfile  api.py  main.py  requirements.txt
consumer/: Dockerfile  app.py  config.yaml  consumer.py  requirements.txt
dashboard/: app.py  config.yaml  dashboard.py  requirements.txt
infrastructure/: __init__.py  connection.py  docker_controller.py
producer/: app.py  producer.py  requirements.txt
src/: api.py  consumer.py  dashboard.py  etl_trips.py  producer.py
src/dags/: real_time_pipeline_dag.py
